--- a/calendar/myindex.html
+++ b/calendar/myindex.html
@@ -64,7 +64,7 @@
         for (let i = 0; i < table.length; i++) {
             content += `<tr>`;
 
-            for (let j = 0; j < table[i].length; j++) {
+            for (let j = 0; j < 7; j++) {
                 let currentElement = table[i][j];
                 let cellTag;
 
